style.css
html,body {
    width: 100%;
    margin: 0;
    padding: 0;
    background-color: white;
}

.container-fluid {
    padding: 0;
}

.navFixed {
    position: fixed;
    height: 120px;
    width: 100%;
    z-index:1;
}

.navi {
    width: 100%;
    margin: 0;
    padding: 0;
}

.firstDiv {
    height: 30px;
    background-color: black;
    padding-top: 4px;
    padding-bottom: 4px;
    font-size: 14px;
    color: white;
    font-weight: 400;
}

.btn {
    float: right;
    font-size: 16px;
    min-width: 100px;
    padding: 0;
    background-color: white;
    border: white;
    color: black;
    font-weight: bold;
    border-radius: 0;
}

.btn:hover {
    background: rgb(0, 0, 0); /* Fall-back for browsers that don't                                 support rgba */
    background: rgba(54, 25, 25, 0);
    color: white;
}

.secondDiv {
    min-height: 50px;
    background-color: white;
}


.navbar-collapse .navbar-nav .nav-item {
    color: black;
    font-size: 18px;
    font-weight: 600;
    height: 58px;
    padding-top: 1em;
    min-width: 510px;
    margin-left: 15px;
    margin-right: 15%;

}

.navbar-collapse .navbar-nav .nav-item:hover {
    color: white;
    background: linear-gradient(black, #0071BC);

}


.navbar-brand {
    width: 50%;
    padding-left: 0px;
    padding-right:0px;
    margin-right:0px;
}

.navbar-toggler {
    padding: 0;
    margin-top: 13px;
    border: 0px;
    border-radius: 0px;
}

.navbar-toggler-icon {
    float: right;
    border-color: black;
}

.navbar-toggler-icon:active {
    display: inline-block;
}


#logo {
    margin-right: 5px;
    float:left;
}



.thirdDiv {

    background-color: #0071BC;
    height: 290px;
    text-align: center;
    color: black;
    padding-top: calc(110px + 1em);
    padding-bottom: 1em;
    margin-bottom: 30px;
}


.row {
    margin: 0;
    padding: 0;
}

.col-lg-6 {
    padding: 0;
    margin: 0;
}

.col-12 {
    margin: 0;
    padding: 0;
}

/* Photo carousel */

.carousel-caption {
    color:black;
    font-weight: 900;
    background-color: white;
}


#carouselPhotos {
    z-index:0;
}

.d-block {
    height: 270px;
    margin-bottom: 30px;
}

/* About section */

.carousel-control-prev-icon, .carousel-control-next-icon {
    background-color: #0071BC;
    border-radius: 50%;
    border: 2px solid #0071BC;
}




.about {
    height: 100%;
    background-color: #0071BC;
    text-align: center;
    color: black;
    margin: 0;
}

.aboutText {
    padding-left: 10px;
    padding-right: 10px;
}

.display-4 {
    padding-top: 10px;
}

/* Featured Projects text */

.featured {
    margin-top: 60px;
    margin-bottom: 30px;
    color: black;
}

.text {
    margin-top: 10px;
    text-align: center;
}

.arrow {
    font-size: 36px;
    margin-top: 10px;
}

picture {
    display: block;
    margin-left: auto;
    margin-right: auto;
}



/* Project carousel */

.projects {
    width: 100%;
    /*padding-top: 40%;*/
    height: 200px;
    border: none;
    margin-top: 30px;
    margin-bottom: 30px;
    border-radius: 0;
    background-color: #0071BC;
}

.card {
    background-color: #0071BC;
    width: 33.33%;
    text-align: center;
    border-radius: 0;
    margin-right: 1px;

}


/* Services */

.services {
    width: 100%;
    background-color:#0071BC;
    text-align: center;
    color: black;
    margin: 0;
    padding: 20px;
    margin-top: 30px;
}


/* Contact and footer */

.contact {
    min-height: 200px;
    min-width: 100%;
    background-color: black;
    color: white;
    margin: 0px;
    margin-top: 30px;
    padding: 0px;

}

.footer {
    padding: 0px;
    margin: 0px;

}

@media only screen and (min-width: 765px) {

    #carouselPhotos, .photos {
        height: 400px;
        margin-bottom: 30px;
    }

    .d-block {
        margin: 0;
        height: 100%;
    }

    .projects {
    height: 250px;
    }


.aboutText {
    padding-left: 20px;
    padding-right: 20px;
}

.display-4 {
    padding-top: 0px;
}

    .navbar-collapse .navbar-nav .nav-item {
    min-width: 690px;


}
}

@media only screen and (min-width: 990px) {
    .nav-item {
        margin-right: 70px;
    }

}


@media only screen and (min-width: 1000px) {
    #carouselPhotos, carousel-inner, .photos {
        height: 100%;
        margin: 0;
    }

    .about {
        margin: 0;
        padding: 0;
        margin-left: 20px;
    }

    .d-block {
        margin: 0;

    }

    .projects {
        height: 300px;
    }

    .aboutText {
        padding-left: 20px;
        padding-right: 20px;
    }

    .display-4 {
        padding-top: 30px;
        padding-bottom: 30px;
    }


}

